hydroflow/tests/compile-fail/surface_singleton_badexpr.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/surface_singleton_badexpr.rs:7:40
  |
7 |             -> filter(|value| value <= #my_ref)
  |                                        ^^^^^^^ expected `&u32`, found integer
  |
help: consider removing deref here
  |
7 |             -> filter(|value| value <= #my_ref)
  |
